lab-3/arcadia-ingress2-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arcadia
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - arcadia.ic.f5demo.id
      secretName: default-server-secret
  rules:
    - host: arcadia.ic.f5demo.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                 name: main
                 port: 
                   number: 80
          - path: /files
            pathType: Prefix
            backend:
              service:
                 name: backend
                 port: 
                   number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                 name: app2
                 port: 
                   number: 80
          - path: /app3
            pathType: Prefix
            backend:
              service:
                 name: app3
                 port: 
                   number: 80
